# MAPIE

./: .appveyor.yml  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  =  AUTHORS.md  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST.rst  THIRD_PARTY_NOTICES.md  appveyor.yml  assessment.py  conda.yml  envionment.notebooks.yml  environment.ci.yml  environment.dev.yml  environment.doc.yml  environment.notebooks.yml  environment.yml  environment_dev.yml  environment_doc.yml  migration_guide.md  mkdocs.yml  (+15 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: deploy-docs.yml  deploy-gh-pages.yml  doctest.yml  issue-metrics.yml  lint.yml  publish-final-release.yml  publish-release-candidate.yml  publish.yml  python-app.yml  python-publish.yml  test.yml  tests.yml
.history/mapie/: quantile_regression_20221026175241.py
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/all-examples/: index.html
1.4.0/api/: index.html
1.4.0/contributing-docs/: index.html
1.4.0/search/: search_index.json
doc/: Cifar10.rst  Makefile  api.rst  choosing_the_right_algorithm.rst  choosing_the_right_algorithm_classification.rst  choosing_the_right_algorithm_regression.rst  conf.py  contributing-docs.md  custom_nonconformity_score_proof.ipynb  environment.yml  environment_doc.yml  external_risk_control_package.rst  fix.py  index.md  index.rst  index_binary_classification.rst  index_classification.rst  index_mondrian.rst  index_regression.rst  llm_risk_control.rst  make.bat  mapie_llm.rst  method_description.rst  notebooks_calibration.rst  notebooks_classification.rst  notebooks_multilabel_classification.rst  notebooks_regression.rst  notebooks_risk_control.rst  prefit_CQR.rst  quick_start.rst  split_cross_conformal.rst  theoretical_description.rst  theoretical_description_binary_classification.rst  theoretical_description_calibration.rst  theoretical_description_calibrators.rst  theoretical_description_ccp.rst  theoretical_description_classification.rst  theoretical_description_conformity_scores.rst  theoretical_description_metrics.rst  theoretical_description_mondrian.rst  (+11 more)
doc/_templates/: banner-layout.html  class.rst  layout.html
doc/all-examples/: calibration.md  classification.md  index.md  mondrian.md  regression.md  risk-control.md
doc/api/: calibration.md  classification.md  index.md  risk-control.md  utils.md
doc/calibration/: notebooks.md
doc/examples_classification/: index.rst  plot_blobs.ipynb  plot_blobs.py.md5  plot_blobs.rst  plot_blobs_codeobj.pickle  plot_sadinle2019_example.ipynb  plot_sadinle2019_example.py  plot_sadinle2019_example.py.md5  plot_sadinle2019_example.rst  plot_sadinle2019_example_codeobj.pickle  sg_execution_times.rst
doc/examples_regression/: index.rst  plot_barber2020_simulations.ipynb  plot_barber2020_simulations.py  plot_barber2020_simulations.py.md5  plot_barber2020_simulations.rst  plot_barber2020_simulations_codeobj.pickle  plot_both_uncertainties.ipynb  plot_both_uncertainties.py.md5  plot_both_uncertainties.rst  plot_both_uncertainties_codeobj.pickle  plot_homoscedastic_1d_data.ipynb  plot_homoscedastic_1d_data.py  plot_homoscedastic_1d_data.py.md5  plot_homoscedastic_1d_data.rst  plot_homoscedastic_1d_data_codeobj.pickle  plot_nested-cv.ipynb  plot_nested-cv.py.md5  plot_nested-cv.rst  plot_nested-cv_codeobj.pickle  plot_prefit_nn.ipynb  plot_prefit_nn.py  plot_prefit_nn.py.md5  plot_prefit_nn.rst  plot_prefit_nn_codeobj.pickle  plot_timeseries_example.ipynb  plot_timeseries_example.py.md5  plot_timeseries_example.rst  plot_timeseries_example_codeobj.pickle  searchindex.db  sg_execution_times.rst
doc/getting-started/: choosing-algorithm.md  migration-0x-to-1x.md  quick-start.md  split-cross-conformal.md  v1-release-notes.md
doc/getting_started/: choosing_algorithm.rst  conformalization_data.rst  quick_start.rst
doc/images/: comp-methods.csv
doc/stylesheets/: extra.css
doc/theory/: binary-classification.md  calibration.md  metrics.md  (+8 more)
doc_legacy/: api.rst  conf.py  index.rst  index_mondrian.rst  llm_risk_control.rst  theoretical_description_classification.rst  theoretical_description_exchangeability.rst  theoretical_description_risk_control.rst  v1_release_notes.rst
docs/: contributing-docs.md  index.md
examples/: README.rst  __init__.py  barber2020_simulations.py  plot_barber2020_simulations.py  plot_blobs.py  plot_both_uncertainties.py  plot_classifier.py  plot_homoscedastic_1d_data.py  plot_nested-cv.py  plot_prefit_nn.py  plot_sadinle2019_example.py  plot_template.py  plot_timeseries.py  plot_timeseries_example.py  plot_timeseriessplit_in_mapie.py  plot_toy_model.py  plot_transformer.py
latest/: 404.html  index.html  sitemap.xml
mapie/: __init__.py  _compatibility.py  _example_utils.py  _machine_precision.py  _prediction_interval.py  _typing.py  _venn_abers.py  _version.py  aggregation_functions.py  binary_risk_control_api_v1.py  binary_risk_control_target_api.py  calibration.py  classification.py  classification_calibration.py  classification_draft.py  conformity_scores.py  covariate_shift_regression.py  density_ratio.py  dre.py  estimators.py  from mapie.classification import MapieCl.py  louis.py  mapieregressor.py  metrics.py  mondrian.py  multi_label_classification.py  prediction_interval.py  quantile_regression.py  quantile_timeit.ipynb  regression.py  regression_edit.py  residual_scores.py  risk_control.py  risk_control_draft.py  subsample.py  time_series_regression.py  utils.py  wrap_arrays.py
mapie_doc/: pyvenv.cfg
mapie_v1/: __init__.py  _utils.py  _version.py  classification.py  migration_guide.md  regression.py  utils.py
notebooks/: Makefile  README.md  ccp_regression_demo.ipynb
predinterv/: __init__.py  _prediction_interval.py
skltemplate/: _template.py
(+839 files in other folders)
