[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "MAPIE"
version = "1.2.0"
description = "A scikit-learn-compatible module for estimating prediction intervals."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
maintainers = [
    {name = "Valentin Laurent", email = "valentin.laurent@capgemini.com"},
    {name = "Louis Lacombe", email = "louis.lacombe@capgemini.com"},
    {name = "Vincent Blot", email = "vincent.blot@capgemini.com"},
    {name = "Geoffray Brelurut", email = "geoffray.brelurut@capgemini.com"},
    {name = "Hassan Maissoro", email = "hassan.maissoro@capgemini.com"},
    {name = "Adrien Le Coz", email = "adrien.le-coz@inria.fr"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.1",
    "scikit-learn>=1.4",
    "scipy>=1.10",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://github.com/scikit-learn-contrib/MAPIE"
Documentation = "https://mapie.readthedocs.io/en/latest/"
Repository = "https://github.com/scikit-learn-contrib/MAPIE"
Issues = "https://github.com/scikit-learn-contrib/MAPIE/issues"
Changelog = "https://github.com/scikit-learn-contrib/MAPIE/releases"
DOWNLOAD = "https://pypi.org/project/MAPIE/#files"

[project.optional-dependencies]
dev = [
    "bump2version==1.0.1",
    "build==1.3.0",
    "codecov==2.1.13",
    "mypy<1.15",
    "pandas==2.3.3",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.3",
    "twine==6.2.0",
    "wheel==0.45.1",
]
docs = [
    "lightgbm==4.6.0",
    "matplotlib==3.9.4",
    "numpydoc==1.9.0",
    "pandas==2.3.3",
    "sphinx==7.4.7",
    "sphinx-gallery==0.19.0",
    "sphinx_rtd_theme==3.0.2",
    "typing_extensions==4.15.0",
]
notebooks = [
    "ipykernel==6.31.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.0",
    "jupytext==1.18.1",
    "matplotlib==3.9.4",
    "nbconvert==7.16.6",
    "pandas==2.3.3",
    "scikeras==0.13.0",
    "seaborn==0.13.2",
    "tensorflow==2.20.0",
    "tensorflow_datasets==4.8.3",
    "xgboost==2.1.4",
    "plotly==6.5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mapie", "mapie.*"]

# Exclude ignored directories.
[tool.ruff]
exclude = [
    ".coverage",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "_templates",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "list",
    "doc/conf.py"
]

line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["COM812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Ignore notebooks
exclude = ["*.ipynb"]

# Use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
# Ignores multiple statements on one line, variables never used, import order in notebooks
"*.ipynb" = ["E702", "F841", "E402"]
